# akari_hackathon-2024-12-21

./: .env_example  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
src/: googlemap_search.py  main.py
src/app/: main.py
src/app/static/: scripts.js  styles.css
src/app/templates/: index.html  login.html
