[tool.poetry]
name = "langchain-bot"
version = "0.1.0"
description = "Langchainを使ったチャットボット"
authors = ["wrikuto <waxtuii@gmial.com>"]


[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.3"
fastapi = {version = "^0.112.0", extras = ["all"]}
langchain = ">=0.3.3,<0.4.0"
langchain-core = "^0.3.19"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.4"
langgraph = "^0.2.39"
langchain-experimental = "^0.3.2"
openai = "^1.52.0"
Jinja2 = "^3.1.3"
uvicorn = "^0.30.5"
sqlmodel = "^0.0.22"
PyMySQL = "^1.1.1"
pydantic = "^2.8.2"
starlette = ">=0.37.2,<0.39.0"  # fastapiの依存関係に合わせる
pandas = "^2.2.3"
matplotlib = "^3.9.2"
spoonacular = "^3.0"
tavily-python = "^0.5.0"
langchain-chroma = "^0.1.4"
pysqlite3-binary = "^0.5.4"
chromadb = "^0.5.20"


[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
